<resources>
    <string name="app_name">Programmeringsuppgift</string>
    <string name="accelerometers_button">Accelerometer</string>
    <string name="compass_button">Compass</string>
    <string name="accelerometer_title">Accelerometer values:</string>
    <string name="acc_X">X:</string>
    <string name="acc_Y">Y:</string>
    <string name="acc_Z">Z:</string>
    <string name="textviewResult">OK!</string>
    <string name="boat">boat</string>
    <string name="map">map</string>
    <string name="boatbutton"></string>
</resources>
