<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccelerometerActivity"
    android:background="@drawable/backgroundllight">

    <TextView
        android:id="@+id/textView"
        android:layout_width="400dp"
        android:layout_height="86dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/accelerometer_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#8A000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewX"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:text="@string/acc_X"
        android:textColor="#8A000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewY"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:text="@string/acc_Y"
        android:textColor="#8A000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewX" />

    <TextView
        android:id="@+id/textViewZ"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:text="@string/acc_Z"
        android:textColor="#8A000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewY" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/textviewResult"
        android:textColor="#083F83"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boatbutton"
        android:layout_width="166dp"
        android:layout_height="374dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/boatfromabove2"
        android:text="@string/boatbutton"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>